Made the project compatible with Java 8
Tests appear to be broken and thus have been disabled.