@@ -16,6 +16,7 @@ package mslinks;
 
 import java.io.IOException;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import org.junit.Test;
 import org.junit.experimental.categories.Category;
 
@@ -1346,7 +1347,7 @@ public class ReadTestData extends TestUtils {
 	@Test
 	@Category(ReadTestData.class)
 	public void ExportLinkFiles() throws IllegalArgumentException, IllegalAccessException, IOException {
-		Path exportDir = Path.of(".working_dir", "export");
+		Path exportDir = Paths.get(".working_dir", "export");
 		ExportLinkFiles(exportDir, this.getClass(), true);
 	}
 }
